Add full jbundle documentation to project page
Migrate documentation from GitHub repository to be the official
project page, including: motivation, comparisons with GraalVM,
quick start guide, performance details, installation, usage
examples, supported JDK versions, platforms, and contribution guide.